feat: modulith and preparation for it
