# backend/src/main/java/rs/delimo/item/api/ItemController.java
@@ -5,6 +5,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import rs.delimo.api.controller.ItemsApi;
 import rs.delimo.api.dto.ItemDto;
+import rs.delimo.api.dto.ItemFilterDto;
 import rs.delimo.api.dto.ItemPageResponse;
 import rs.delimo.api.dto.ItemTitle;
 import rs.delimo.item.application.ItemService;
@@ -28,12 +29,8 @@ public class ItemController implements ItemsApi {
     }
 
     @Override
-    public ResponseEntity<List<ItemPageResponse>> listItems(Integer page, Integer pageSize, String city) {
-        return ItemsApi.super.listItems(page, pageSize, city);
+    public ResponseEntity<ItemPageResponse> listItems(Integer page, Integer pageSize, ItemFilterDto itemFilterDto) {
+        return ResponseEntity.ok(service.search(page, pageSize, itemFilterDto));
     }
 
-    @Override
-    public ResponseEntity<List<ItemDto>> searchItems(String text, Integer page, Integer pageSize, String city) {
-        return ItemsApi.super.searchItems(text, page, pageSize, city);
-    }
 }
