# backend/src/main/java/rs/delimo/request/infrastructure/repository/RequestRepository.java
@@ -3,23 +3,25 @@ package rs.delimo.request.infrastructure.repository;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.data.jpa.repository.JpaSpecificationExecutor;
 import org.springframework.data.jpa.repository.Query;
 import org.springframework.data.repository.query.Param;
 import org.springframework.stereotype.Repository;
+import rs.delimo.common.valueobject.RequestId;
+import rs.delimo.common.valueobject.UserId;
 import rs.delimo.request.domain.ItemRequest;
-import rs.delimo.user.domain.User;
 
 import java.util.Optional;
 import java.util.UUID;
 
 @Repository
-public interface RequestRepository extends JpaRepository<ItemRequest, UUID> {
+public interface RequestRepository extends JpaRepository<ItemRequest, RequestId>, JpaSpecificationExecutor<ItemRequest> {
 
-    void deleteByRequester(User requester);
+    void deleteByRequester(UserId requester);
 
-    Page<ItemRequest> findAllByRequesterId(UUID id, Pageable pageable);
+    Page<ItemRequest> findAllByRequester(UserId id, Pageable pageable);
 
-    Optional<ItemRequest> findByIdAndRequesterId(UUID id, UUID requesterId);
+    Optional<ItemRequest> findByIdAndRequesterId(RequestId id, UserId requesterId);
 
     @Query("select ir from ItemRequest ir " +
             "where upper(ir.title) like upper(concat('%', :text, '%'))" +
